--- a/high-concurrency/src/common/common.css
+++ b/high-concurrency/src/common/common.css
@@ -1,12 +1,42 @@
+/* * {
+    overflow-x: hidden;
+} */
+
 /* 百分之90width的居中布局 */
 .index {
     width: 85%;
     margin: 50px auto;
 }
 
+.w-40 {
+    width: 40px;
+}
+
+.w-60 {
+    width: 60px;
+}
+
+.w-full {
+    width: 100%;
+}
+
 .index-border {
     border: 1px solid #f0eeee;
     border-radius: 20px;
+}
+
+/* 去除选中状态边框 */
+.btn-none {
+    outline: none;
+}
+
+.btn-hover:hover {
+    border: 1px solid #26a69a;
+    background: #26a69a;
+}
+
+.border-no {
+    border: none;
 }
 
 /* 去除数字输入框的上下箭头 */
@@ -20,29 +50,36 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
+/* 设置输入的文字居中显示 */
+input.text {
+    text-align: center;
+}
+
 /* 小字体 */
 .small {
     font-size: 0.8rem;
     color: gray;
 }
 
-.br-1{
+.br-1 {
     border-radius: 10px;
 }
 
-.br-2{
+.br-2 {
     border-radius: 20px;
 }
-.br-5{
+
+.br-5 {
     border-radius: 50px;
 }
-.mt-100{
+
+.mt-100 {
     margin-top: 100px;
 }
 
 /* 手型样式 */
-.button-hand{
-    cursor:pointer
+.button-hand {
+    cursor: pointer
 }
 
 /* 通知 */
@@ -52,4 +89,24 @@ input[type=number]::-webkit-outer-spin-button {
     left: 40%;
     width: 20%;
     z-index: 999;
-  }
+}
+
+.m-auto {
+    margin: 0 auto;
+}
+
+.pa-1 {
+    padding: 10px;
+}
+
+.bg-color {
+    background-color: #26a69a;
+}
+
+.index-color {
+    color: #26a69a;
+}
+
+.white {
+    color: #fff;
+}
