--- a/high-concurrency/src/common/common.css
+++ b/high-concurrency/src/common/common.css
@@ -39,6 +39,19 @@
     border: none;
 }
 
+.btn-green {
+    background-color: #26a69a;
+    background-image: linear-gradient(90deg, #26a69a 0%, #26a69a 100%);
+    border-radius: 20px;
+    border: 1px solid #26a69a;
+}
+
+.btn-white {
+    background-color: #fff;
+    background-image: linear-gradient(90deg, #f1f1f1 100%);
+    border-radius: 20px;
+}
+
 /* 去除数字输入框的上下箭头 */
 input[type=number] {
     -moz-appearance: textfield;
@@ -109,4 +122,14 @@ input.text {
 
 .white {
     color: #fff;
+}
+
+/* 透明玻璃 */
+.glassmorphism{
+    background: rgba(255, 255, 255, 0.35);
+  /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
