--- a/high-concurrency/src/common/common.css
+++ b/high-concurrency/src/common/common.css
@@ -1,7 +1,24 @@
 /* * {
     overflow-x: hidden;
 } */
-
+:root {
+    /* COLORS */
+    --white: #e9e9e9;
+    --gray: #333;
+    --blue: #0367a6;
+    --lightblue: #008997;
+  
+    /* RADII */
+    --button-radius: 0.7rem;
+  
+    /* SIZES */
+    --max-width: 758px;
+    --max-height: 420px;
+  
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
 /* 百分之90width的居中布局 */
 .index {
     width: 85%;
@@ -34,7 +51,11 @@
     border: 1px solid #26a69a;
     background: #26a69a;
 }
-
+.compon-btn {
+    border-radius: 30px;
+    font-size: 1.3rem;
+    color: white;
+  }
 .border-no {
     border: none;
 }
@@ -107,7 +128,9 @@ input.text {
 .m-auto {
     margin: 0 auto;
 }
-
+.m-5{
+    margin:5px;
+}
 .pa-1 {
     padding: 10px;
 }
